--- a/Zettel_03/zettel-03-Engelken-Schmidberger-Woithe-Steinke-Koglin.tex
+++ b/Zettel_03/zettel-03-Engelken-Schmidberger-Woithe-Steinke-Koglin.tex
@@ -24,19 +24,19 @@ Wobei $D$ die Distanz zum Ziel und $S$ die Breite bzw. Größe des Ziels ist.
 			\item Pull-Down-Menü
 			\begin{enumerate}
 				\item Option 1
-				 	\[ D =\frac{ \sqrt{5px \cdot 60px}}{2} \]
+				 	%\[ D =\frac{ \sqrt{5px \cdot 60px}}{2} \]
 				 	\[ S = 2D \]
 					\[ IoD = \log_2{\left(\frac{D}{2D} + 1 \right) = \log_2{1.5}}\]
 				\item Option 2
-				    \[ D =\frac{ \sqrt{15px\cdot 60px}}{2} \]
+				   % \[ D =\frac{ \sqrt{15px\cdot 60px}}{2} \]
 				    \[ S = \frac{D}{3} \]	
 				    \[ IoD = \log_2{\left(\frac{D}{\frac{D}{3}} + 1 \right)} = \log_2{4} \]
 				\item Option 3
-					\[ D =\frac{ \sqrt{25px\cdot 60px}}{2} \]
+					%\[ D =\frac{ \sqrt{25px\cdot 60px}}{2} \]
 					\[ S = \frac{D}{5} \]
 					\[ IoD = \log_2{\left(\frac{D}{\frac{D}{5}} + 1 \right)} = \log_2{6} \]
 				\item Option 4
-					\[ D =\frac{ \sqrt{35px\cdot 60px}}{2} \]
+					%\[ D =\frac{ \sqrt{35px\cdot 60px}}{2} \]
 					\[ S = \frac{D}{7} \]
 					\[ IoD = \log_2{\left(\frac{D}{\frac{D}{7}} + 1 \right)} = \log_2{8} \]
 			\end{enumerate}
