Typos gefixt: [15] Aufgabe 5 -> Aufgabe 6; [53] Optionnen -> Optionen

--- a/Zettel_03/zettel-03-Engelken-Schmidberger-Woithe-Steinke-Koglin.tex
+++ b/Zettel_03/zettel-03-Engelken-Schmidberger-Woithe-Steinke-Koglin.tex
@@ -12,7 +12,7 @@
 \kopf
 \renewcommand{\figurename}{Figure}
 
-\aufgabe{5 \textit{(Team-Aufgabe)}} 
+\aufgabe{6 \textit{(Team-Aufgabe)}} 
 Laut Fitt's Law gilt
 \[
 	IoD = \log_2{\left(\frac{D}{S} + 1 \right)}
@@ -50,7 +50,7 @@ Wobei $D$ die Distanz zum Ziel und $S$ die Breite bzw. Größe des Ziels ist.
 			
 		\end{enumerate}
 	\item
-		Für das Pie-Menü ist der Index of Difficultiy für jede Option gleich, es werden also alle Optionnen gleich schnell erreicht.
+		Für das Pie-Menü ist der Index of Difficultiy für jede Option gleich, es werden also alle Optionen gleich schnell erreicht.
 		Dies ist für das Pull-Down-Menü nicht der Fall, je weiter die Option vom Zeiger entfernt liegt, desto höher ist der Index of Difficulty - dieser wächst logarithmisch. 
 		
 		Das Pie-Menü bietet sich also z.B. als Kontextmenü an, wenn es nicht am Rande des Bildschirms liegt (bzw müsste hier ein Halb- oder Viertelkreis verwendet werden).
