--- a/Zettel_04/zettel-04-Engelken-Schmidberger-Woithe-Steinke-Koglin.tex
+++ b/Zettel_04/zettel-04-Engelken-Schmidberger-Woithe-Steinke-Koglin.tex
@@ -14,7 +14,31 @@
 
 \aufgabe{7 \textit{(Team-Aufgabe)}} 
 
+\textbf{\textit{Anforderungen}}
+\begin{enumerate}
+\item Buch Ausleihe/Rückgabe
+\item Benutzer Hinzufügen/Löschen
+\item Buch Hinzufügen/Löschen
+\item Suchen	
+\item Tastenkürzel
+\end{enumerate}
 
+\textbf{\textit{Designfehler in Aufgabe 7}} \newline
+
+\textbf{\textit{Nutzer hinzufügen}}
+\begin{enumerate}
+\item Name aufteilen in Name/Vorname
+\item Adresse aufteilen in Straße/PLZ/Ort
+\item Daten als Datumsfeld
+\item Geschlecht als Radiobuttons
+\end{enumerate}
+
+\textbf{\textit{Buch hinzufügen}} \newline
+\begin{enumerate}
+\item Verleihstatus/Entleiher macht kein Sinn bei Neuaufnahme
+\item Schlagworte als Multiselektion
+\item Möglich ein Buch als Präsenzexemplar hinzuzufügen
+\end{enumerate}
 
 
 \end{document}
