--- a/Zettel_08/zettel-08-Engelken-Schmidberger-Woithe-Steinke-Koglin.tex
+++ b/Zettel_08/zettel-08-Engelken-Schmidberger-Woithe-Steinke-Koglin.tex
@@ -5,7 +5,7 @@
 \newcommand{\autor}{Ralf Engelken, Joachim Schmidberger, Frank Woithe, Michael Steinke, Merlin Koglin}
 
 \usepackage{hci}
-
+\usepackage{float} 
 
 \begin{document}
 % Seitenkopf mit Informationen
@@ -16,8 +16,22 @@
 Wählen Sie aus den folgenden Anwendungsdomänen jeweils ein konkretes interaktives System aus und beschreiben Sie das Konzeptionelle Modell dahinter. Konkretisieren Sie dies, indem Sie mindestens drei Interface-Elemente (pro System) auswählen und die dahinter stehende Metapher erklären. \newline
  
 \textbf{\textit{1. eCommerce/Web-Shop (z.B. Amazon, Zalando, ...)}} \newline
+Als Beispiel für einen Web-Shop soll hier \textbf{\textit {Pearl.de}} dienen. Die Seite wirkt sehr unaufgeräumt, eher wie die Reste-Box eines Geschäfts. Das Motto steht oben links, direkt unter dem Start-Logo: Immer preiswert und innovativ. Die Ware ist entsprechend zusammengestellt: Möglichst viel Funktionalität für wenig Geld, aber es muss nicht unbedingt hochwertig sein. Dem entsprechend werden auch gleich auf der Startseite möglichst viele Produkte angepriesen.\\
+Dem konzeptionellen Modell des Web-Shop Interfaces soll vermutlich der reale Einkauf als Vorbild dienen, bei dem ein Kunde mit dem Einkaufswagen durch Regalreien schlendert, und hier und da mal etwas in seinen Einkaufswagen wirft.
 
-LORUM IPSUM ... \newline
+\begin{figure}[H]
+\centering \includegraphics[width=1\textwidth]{pearl.jpg}
+\caption{Navigations-Metaphern auf Pearl.de: a) Einkaufswagen, b) Neu - Aufkleber c) Obere Menuzeile}
+\end{figure}
+
+Bei der Suche nach Navigations Metaphern des Webshops sind mir folgende Elemente Aufgefallen:\newline
+\begin{enumerate}
+\item Pearl benutzt wie viele Web-Shops die Einkaufswagen-Metapher, welche mittlerweile zu einem Standard geworden ist. Zusätzlich wird das Ikon, durch einen roten Pfeil ergänzt, bei jedem Produkt verwendet. Dies soll an den realen Vorgang erinnern, Produkte in einen Einkaufswagen zu werfen. Die Interface-Gestallter erhoffen sich hier eine virtuelle Affordance zum Klick auf das Ikon.
+\item Bewusst auffällig sind die zusätzlichen Aufkleber-Ikons bei verschieden Produkten. Sie sollen an einen roten Aufkleber erinnern, wie er in manchen realen Geschäften, z.B. bei reduzirter Ware, nachträglich aufgeklebt wird. Es handelt sich hier um einen Skeuomorphismus, der durch eine angedeutete, umgeknickte Ecke der Aufkleber unterstrichen wird. Allerdings ist dieser Stiel bei den restlichen Elementen nicht konsequent durchgehalten, was die Seite uneinheitlich wirken lässt.
+\item Ein weiteres, auffälliges Bedienelement ist die horizontale, zentrale Menuleiste im Kopfteil der Seite. Sie wirkt wie heraushängende Laschen und vermittelt nicht die Affordance auf sie zu klicken, sondern eher, daran zu ziehen. Auch die verschiedenen Farben wirken eher irritierend.
+\end{enumerate}
+
+Zusammenfassend kann man die Seite weder als besonders stilsicher, konsequent noch ästhetisch gelungen bezeichnen. Dennoch scheint sie für ihre Zielgruppe zu funktionieren.\\
 
 \textbf{\textit{2. Mediaplayer (um Audio oder Video Dateien abzuspielen)}} \newline
 
