--- a/Zettel_08/zettel-08-Engelken-Schmidberger-Woithe-Steinke-Koglin.tex
+++ b/Zettel_08/zettel-08-Engelken-Schmidberger-Woithe-Steinke-Koglin.tex
@@ -35,7 +35,23 @@ Zusammenfassend kann man die Seite weder als besonders stilsicher, konsequent no
 
 \textbf{\textit{2. Mediaplayer (um Audio oder Video Dateien abzuspielen)}} \newline
 
-LORUM IPSUM ... \newline
+Das konzeptionelle Modell eines Mediaplayers ermöglicht das Auswählen und Wiedergeben von Audio- oder Video-Dateien.
+Als Beispiel wurde WinAmp ausgewählt.
+
+\begin{figure}[ht]
+\centering \includegraphics[width=0.5\textwidth]{winamp.jpg}
+\caption{Navigations-Metaphern bei WinAmp: 1. Steuer-Buttons, 2. Auswurf-Button, 3. Equalizer}
+\end{figure}
+
+Folgende Interface-Elemente werden analysiert:
+\begin{enumerate}
+\item[(1)] Steuer-Buttons
+	Die Steuer-Buttons bestehen aus 5 Buttons, auf denen die Symbole abgebildet werden, die bei CD-  	Playern für Starten, Pausieren und Beenden der Wiedergabe sowie zum Springen zum vorigen und 		nächsten Titel benutzt werden. Sie bilden eine Metapher eines realen CD-Players.
+\item[(2)] Auswurf-Button
+	Der Auswurf-Button löscht die Playlist und öffnet einen Dialog zur Dateiauswahl. Er ist eine 		Metapher für das Wechseln der Audioquelle.
+\item[(3)] Equalizer
+	Mit	10 senkrechten Slider im Equalizer, die mit Frequenzen beschriftet sind, kann man die 			Wiedergabe einzelner Frequenzbereiche verstärken bzw. dämpfen. Der Equalizer ist die Metapher 		eines grafischen Equalizers in einem realen Mischpult.
+\end{enumerate}
 
 \textbf{\textit{3. soziales Netzwerk}} \newline
 
@@ -59,10 +75,23 @@ Das Nachrichtensymbol (1) besteht aus zwei ineinander verschachtelten Sprechblas
 Die Metapher für eine Gruppe, in dem Fall die Gruppe 'Lehramtsbiologen' (2), besteht aus einem Reagenzglas und dem Text. An einem passenden Icon und dem Text soll der User erkennen um welche Art von Gruppe es sich handelt und auf dieses Klicken um den den Inhalt der Gruppe anzuzeigen. Fährt der User mit der Maus über die Gruppe, so wird sie etwas grauer hinterlegt, was einen Link oder klickbares Element andeutet. \newline
 Die Pinnwand (3) trägt den Namen der Methapher schon in sich, denn sie soll wie eine Pinnwand im richtigen Leben fungieren. Je nachdem wo diese Pinnwand hängt (z.B. in einem abgeschlossenem Raum oder sichtbar zur Straße hin) sehen mehr oder weniger Menschen eine Nachricht auf dieser. Gleiches gilt auch hier: Der user schreibt eine Nachricht auf seine Pinnwand und "postet" diese. Über den Button "Custom" kann er noch einstellen, wer diese Nachricht sehen kann. \newline
 
+\pagebreak
+\textbf{\textit{4. Online-Spiel}} \newline
+Eine weitere Domäne sind Online-Spiele. Als Beispiel das Online-Spiel TherianSaga ausgewählt. Das Spiel findet in einer Fantasy-Welt statt und beinhaltet Aspekte  von Webshop und sozialen Medien. Es wurden absichtlich die gleichen Metaphern wie bei anderen Teilaufgaben ausgewählt, um ähnliche Mechanismen in einem ganz anderen Kontext aufzuzeigen.
 
-\textbf{\textit{4. ein Programm/Website aus einer beliebigen weiteren Anwendungsdomäne}} \newline
-
-LORUM IPSUM ... \newline
-
-
+\begin{figure}[ht]
+\centering \includegraphics[width=1\textwidth]{onlinegame.jpg}
+\caption{Metaphern bei TherianSaga: 1. WebShop 2. Auktionshaus 3. Chat}
+\end{figure}
+Folgende Interface-Elemente werden analysiert:
+\begin{enumerate}
+\item[(1)] Web-Shop
+	Der Button ist mit Shop beschriftet und öffnet einen Webshop, in dem Spielelemente für reales 		Geld freigeschaltet werden können.
+\item[(2)] Auktionshaus
+	Die Metapher ist ein Holzhammer, mit dem bei einer Auktion zur Symbolisierung des Zuschlags auf 	den Tisch geschlagen wird. Der Button öffnet eine Auktionsseite, in der Spieler 					Ausrüstung an andere Spieler versteigern bzw. auf Auktionen anderer Spieler bieten können.
+\item[(3)] Chat
+	Die Sprechblase öffnet die Interaktion mit befreundeten Spielern. Sie ist eine Metapher für die 	Kommunikation mit anderen Spielern.
+\item[(4)] Stadt
+	Auf der Karte sind verschiedene Markierungen eingezeichnet. Stellvertretend wurde die Stadt 		ausgewählt. An dieser Stelle kann man besondere Aktionen durchführen wie zum Beispiel 				Ausrüstung kaufen. Die Stadt ist dabei eine Metapher für die Möglichkeiten, die sich in ihr bieten.
+\end{enumerate}
 \end{document}
