--- a/Zettel_12/zettel-12-Engelken-Schmidberger-Woithe-Steinke-Koglin.tex
+++ b/Zettel_12/zettel-12-Engelken-Schmidberger-Woithe-Steinke-Koglin.tex
@@ -44,8 +44,10 @@ Stefan Schmidt
 \item Der Benutzer startet die vorbereitete Waschmaschine/Kaffemaschine, sodaß die Wäsche/der Kaffee fertig ist, wenn er nach Hause kommt.
 \item Der Benutzer schaltet die Heizung ein, damit es warm ist, wenn er nach Hause kommt.
 \item Der Benutzer programmiert den Videorekorder, um eine Sendung aufzuzeichnen.
+\item Der Benutzer kann Fenster und Rollläden öffnen/schließen und das Licht steuern.
+\item Der Benutzer kann die Bewässerungsanlage steuern.
 \item Der Benutzer kontrolliert per Überwachungskamera, ob der Hund Wache hält oder schläft.
-\item Der Benutzer startet den Mixer, um den Gremlin zu erledigen, der in der Küche herumschleicht.
+\item Der Benutzer kann den Mixer einschalten, um den Gremlin zu erledigen, der in der Küche herumschleicht.
 \end{itemize}
 
 \item Kontext
@@ -69,7 +71,18 @@ Stefan Schmidt
 \newpage
 \item Design
 
-
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.8\textwidth]{Sketches_Icon.png} 
+	\caption{Sketches Icon}
+	\label{fig1}
+\end{figure}
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.8\textwidth]{Sketches_App.png} 
+	\caption{Sketches App}
+	\label{fig2}
+\end{figure}
 
 \newpage
 \item Implementierung
@@ -77,7 +90,7 @@ Stefan Schmidt
 
 
 \newpage
-\item Analyse
+\item Evaluation
 
 \end{enumerate}
 \end{document}
